Fixed overflow and margin, spruced up header

--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
 
 body {
   background-color: #2a9fb9;
-  color: rgb(240, 240, 240);
+  color: rgb(220, 220, 220);
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   height: 100%;
@@ -24,16 +24,15 @@ body {
 #main-container {
   min-height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 header {
-  /*font-weight: bold;*/
   text-align: center;
   vertical-align: middle;
 
   background-color: #2D3E50;
-  box-shadow: 0 0.5px 10px rgba(0, 0, 0, 0.4);
-  /*text-align: left;*/
+  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.4);
   padding-top: 5px;
   padding-bottom: 12px;
   margin-bottom: 50px;
@@ -58,7 +57,6 @@ header {
 }
 
 #content-container {
-  /*padding: 10px;*/
   padding-bottom: 70px;
 }
 
@@ -73,8 +71,11 @@ header {
 .heading h2 {
   margin-top: 10px;
   font-size: 12px;
-  /*font-family: helvetica;*/
-  /*text-shadow: none;*/
+}
+
+.letter-list {
+  margin-left:  5%;
+  margin-right: 5%;
 }
 
 .letter {
@@ -145,8 +146,6 @@ footer {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  /*float: left;*/
-  /*display: inline-block;*/
 }
 
 .circle {
@@ -170,6 +169,4 @@ footer {
 
 #footer-text {
   display: inline-block;
-  /*float: left;*/
-  /*text-align: center;*/
 }
